Update header, start with <main>

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20231014030710">
+  <link rel="stylesheet" href="css/style.min.css?_v=20231014225416">
   <title>CrypText ▪ Main page</title>
 </head>
 
@@ -17,7 +17,7 @@
     <div class="header__inner">
       <div class="logo">
         <a class="logo__link" href="#">
-          <picture><source srcset="img/512x512.webp" type="image/webp"><img class="logo__img" src="img/512x512.png" alt="Logo"></picture>
+          <picture><source srcset="img/Logo.webp" type="image/webp"><img class="logo__img" src="img/Logo.png" alt="Logo"></picture>
           CrypText
         </a>
       </div>
@@ -25,22 +25,22 @@
         <ul class="menu__list">
           <li class="menu__item">
             <a class="menu__link" href="#">
-              <span class="menu__link-covered">How </span>does it work
+              <p class="menu__link-covered">How </p>does it work
             </a>
           </li>
           <li class="menu__item">
             <a class="menu__link" href="#">
-              <span class="menu__link-covered">Why </span>it's useful
+              <p class="menu__link-covered">Why </p>it's useful
             </a>
           </li>
           <li class="menu__item">
             <a class="menu__link" href="#">
-              <span class="button-try menu__link-covered">Try </span>it yourself
+              <p class="button-try menu__link-covered">Try </p>it yourself
             </a>
           </li>
           <li class="menu__item">
             <a class="menu__link" href="#">
-              <span class="menu__link-covered">Contact </span>with author
+              <p class="menu__link-covered">Contact </p>with author
             </a>
           </li>
         </ul>
@@ -75,20 +75,20 @@
 						</p>
 						<!-- Slider -->
 						<div class="how__list">
-							<div class="how__-item">
+							<div class="how__item">
 								<img class="how__item-img" src="" alt="" />
 							</div>
-							<div class="how__-item">
+							<div class="how__item">
 								<img class="how__item-img" src="" alt="" />
 							</div>
-							<div class="how__-item">
+							<div class="how__item">
 								<img class="how__item-img" src="" alt="" />
 							</div>
-							<div class="how__-item">
+							<div class="how__item">
 								<img class="how__item-img" src="" alt="" />
 							</div>
 						</div>
-						<button class="button__try greatings__button-try" type="button">Try now!</button>
+						<button class="button__try how__button-try" type="button">Try now!</button>
 					</div>
 				</div>
 			</section>
@@ -246,7 +246,7 @@
 		</main>
 		<footer class="footer"></footer>
 
-		<script src="js/app.min.js?_v=20231014030710"></script>
+		<script src="js/app.min.js?_v=20231014225416"></script>
 		<script></script>
 	</body>
 </html>
