--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20231017233132">
+  <link rel="stylesheet" href="css/style.min.css?_v=20231018211604">
   <title>CrypText ▪ Main page</title>
 </head>
 
@@ -160,7 +160,7 @@
 												Message:
 											</label>
 											<span class="inputs__text-tooltip inputs-tooltip" id="text-tooltip"
-												>Please, use only available characters</span
+												>The message does not meet the requirements</span
 											>
 											<input
 												class="inputs__text-input inputs__field"
@@ -180,7 +180,7 @@
 												>:
 											</label>
 											<span class="inputs__key-tooltip inputs-tooltip" id="key-tooltip"
-												>Please, use only available characters</span
+												>The key does not meet the requirements</span
 											>
 											<input
 												class="inputs__key-input inputs__field"
@@ -257,7 +257,7 @@
 		</main>
 		<footer class="footer"></footer>
 
-		<script src="js/app.min.js?_v=20231017233132"></script>
+		<script src="js/app.min.js?_v=20231018211604"></script>
 		<script></script>
 	</body>
 </html>
