--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20231021003218">
+  <link rel="stylesheet" href="css/style.min.css?_v=20231021185144">
   <title>CrypText ▪ Main page</title>
 </head>
 
@@ -251,7 +251,7 @@
 											<label class="result__key-label" for="result-key">Your secret key:</label>
 											<div class="result__key-field">
 												<div class="result__key-input-field">
-													<input class="result__key-field" id="result-key" type="password" />
+													<input class="result__key-field" id="result-key" type="password" readonly/>
 													<button class="result__key-show" id="result-key-show">
 														<img class="result__key-image key-image" src="" alt="show/hide-password" />
 													</button>
@@ -301,7 +301,7 @@
 		</main>
 		<footer class="footer"></footer>
 
-		<script src="js/app.min.js?_v=20231021003218"></script>
+		<script src="js/app.min.js?_v=20231021185144"></script>
 		<script></script>
 	</body>
 </html>
