Almost finish 'encrypted'

--- a/img/stack/sprite.stack.html
+++ b/img/stack/sprite.stack.html
@@ -105,7 +105,17 @@ They might well be outsourced to an external stylesheet of course.
 -->
 
 <style>
+ .svg-check-circle-dims { width: 24px; height: 24px; }
+ .svg-clipboard-dims { width: 800px; height: 800px; }
  .svg-dice-dims { width: 800px; height: 800px; }
+ .svg-download-dims { width: 478.125px; height: 478.125px; }
+ .svg-eye-dims { width: 800px; height: 800px; }
+ .svg-key-dims { width: 516.375px; height: 516.375px; }
+ .svg-lock-dims { width: 516.375px; height: 516.375px; }
+ .svg-lock-unlock-dims { width: 592.875px; height: 592.875px; }
+ .svg-share-dims { width: 800px; height: 800px; }
+ .svg-undo-dims { width: 800px; height: 800px; }
+ .svg-upload-dims { width: 800px; height: 800px; }
 </style>
 
 <!--
@@ -134,11 +144,71 @@ selector is used to show the very shape that is referenced by the fragment ident
 
             <ul>
 
+             <li title="check-circle">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#check-circle" class="svg-check-circle-dims" alt="check-circle">
+                    </div>
+                    <h2>check-circle, </h2>
+                </li>
+             <li title="clipboard">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#clipboard" class="svg-clipboard-dims" alt="clipboard">
+                    </div>
+                    <h2>clipboard, </h2>
+                </li>
              <li title="dice">
                     <div class="icon-box">
                         <img src="../icons/icons.svg#dice" class="svg-dice-dims" alt="dice">
                     </div>
                     <h2>dice, </h2>
+                </li>
+             <li title="download">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#download" class="svg-download-dims" alt="download">
+                    </div>
+                    <h2>download, </h2>
+                </li>
+             <li title="eye">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#eye" class="svg-eye-dims" alt="eye">
+                    </div>
+                    <h2>eye, </h2>
+                </li>
+             <li title="key">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#key" class="svg-key-dims" alt="key">
+                    </div>
+                    <h2>key, </h2>
+                </li>
+             <li title="lock">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#lock" class="svg-lock-dims" alt="lock">
+                    </div>
+                    <h2>lock, </h2>
+                </li>
+             <li title="lock-unlock">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#lock-unlock" class="svg-lock-unlock-dims" alt="lock-unlock">
+                    </div>
+                    <h2>lock-unlock, </h2>
+                </li>
+             <li title="share">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#share" class="svg-share-dims" alt="share">
+                    </div>
+                    <h2>share, </h2>
+                </li>
+             <li title="undo">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#undo" class="svg-undo-dims" alt="undo">
+                    </div>
+                    <h2>undo, </h2>
+                </li>
+             <li title="upload">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#upload" class="svg-upload-dims" alt="upload">
+                    </div>
+                    <h2>upload, </h2>
                 </li>
          </ul>
 
@@ -148,7 +218,7 @@ selector is used to show the very shape that is referenced by the fragment ident
 
         </section>
         <footer>
-            <p>Generated at Sat, 21 Oct 2023 15:51:43 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
+            <p>Generated at Sun, 22 Oct 2023 22:06:52 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
         </footer>
     </body>
 </html>
