--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20231021185144">
+  <link rel="stylesheet" href="css/style.min.css?_v=20231023010653">
   <title>CrypText ▪ Main page</title>
 </head>
 
@@ -19,7 +19,7 @@
           CrypText
         </a>
       </div>
-      <nav class="menu menu-active" id="header-menu">
+      <nav class="menu" id="header-menu">
         <ul class="menu__list">
           <li class="menu__item">
             <a class="menu__link" href="#">
@@ -117,10 +117,15 @@
 								<div class="drop-area" id="drop-main">
 									<label class="drop-area__inner" for="input-file" id="drop-area">
 										<div class="drop-area__img-container">
-											<img class="drop-area__img" src="" alt="drop-file-here" />
+											<img
+												class="drop-area__img"
+												src="img/icons/icons.svg#upload"
+												alt="drop-file-here"
+											/>
 										</div>
 										<p class="drop-area__text">
-											<span class="drop-area__text-bold">Choose a file</span> or drag it here.
+											<span class="drop-area__text-bold">Choose a file</span
+											><span class="drop-area__text-hide"> or drag it here</span>
 										</p>
 										<input
 											class="encryption__input-file"
@@ -140,6 +145,13 @@
 												id="button-option__encrypt"
 												type="button"
 											>
+												<div class="option__buttons-picture">
+													<img
+														class="option__buttons-image"
+														src="img/icons/icons.svg#lock"
+														alt=""
+													/>
+												</div>
 												Encrypt Message
 											</button>
 											<button
@@ -147,7 +159,14 @@
 												id="button-option__decrypt"
 												type="button"
 											>
-												Decrypt Image
+												<div class="option__buttons-picture">
+													<img
+														class="option__buttons-image"
+														src="img/icons/icons.svg#lock-unlock"
+														alt=""
+													/>
+												</div>
+												Decrypt Message
 											</button>
 										</div>
 										<button class="option__reset encryption__reset" type="button">Reset</button>
@@ -163,6 +182,8 @@
 												>The message does not meet the requirements</span
 											>
 											<div class="inputs__text-input-field">
+												<div class="inputs__entered-character" id="entered-cherecter"></div>
+												
 												<input
 													class="inputs__text-input inputs__field"
 													id="input-text"
@@ -196,7 +217,7 @@
 														<span class="inputs__key-hidden" id="input-key-indicator"></span>
 														<img
 															class="inputs__key-image key-image"
-															src="img/icons/icons.svg#dice"
+															src="img/icons/icons.svg#eye"
 															alt="show/hide-password"
 														/>
 													</button>
@@ -215,7 +236,7 @@
 												<button class="inputs__key-paste key-buttons" id="key-paste" type="button">
 													<img
 														class="inputs__key-image key-image"
-														src="img/icons/icons.svg#dice"
+														src="img/icons/icons.svg#clipboard"
 														alt="paste-key-from-clipboard"
 													/>
 												</button>
@@ -245,42 +266,67 @@
 								<div class="result" id="result-main">
 									<div class="result__inner">
 										<div class="result__encrypt" id="result-enc">
-											<p class="result__text">
-												Your message is encrypted. Now you can download it or copy to clipboard.
-											</p>
+											<p class="result__text">Your message has been successfully encrypted!</p>
 											<label class="result__key-label" for="result-key">Your secret key:</label>
 											<div class="result__key-field">
 												<div class="result__key-input-field">
-													<input class="result__key-field" id="result-key" type="password" readonly/>
-													<button class="result__key-show" id="result-key-show">
-														<img class="result__key-image key-image" src="" alt="show/hide-password" />
+													<input
+														class="result__key-input"
+														id="result-key"
+														type="password"
+														readonly
+													/>
+													<button class="result__key-show" id="result-key-show" type="button">
+														<img
+															class="result__key-image key-image"
+															src="img/icons/icons.svg#eye"
+															alt="show/hide-password"
+														/>
 													</button>
 												</div>
 												<button class="result__key-copy" id="key-copy" type="button">
 													<img
 														class="result__key-image key-image"
-														src="img/icons/icons.svg#dice"
+														src="img/icons/icons.svg#clipboard"
 														alt="copy-the-key-to-clipboard"
 													/>
 												</button>
 											</div>
+											<p class="result__text">
+												You can <span class="result__text-bold">download</span> it,
+												<span class="result__text-bold">copy</span> it to your clipboard or
+												<span class="result__text-bold">share</span> it.
+											</p>
 											<div class="result__download-copy">
 												<a
-													class="result__download"
+													class="result__download key-buttons"
 													id="canvas-download"
 													href="#"
 													download="canvas.png"
 												>
-													<img class="result__download-img" src="" alt="download" />
-													Download
+													<img
+														class="result__download-image result__key-image key-image"
+														src="img/icons/icons.svg#download"
+														alt="download"
+													/>
 												</a>
 												<button
 													class="result__clipboard key-buttons"
 													id="canvas-clipboard"
 													type="button"
 												>
-													<img class="result__key-image key-image" src="" alt="copy-to-clipboard" />
-													Copy to Clipboard
+													<img
+														class="result__key-image key-image"
+														src="img/icons/icons.svg#clipboard"
+														alt="copy-to-clipboard"
+													/>
+												</button>
+												<button class="result__share key-buttons" id="canvas-share" type="button">
+													<img
+														class="result__key-image key-image"
+														src="img/icons/icons.svg#share"
+														alt="share"
+													/>
 												</button>
 											</div>
 										</div>
@@ -301,7 +347,7 @@
 		</main>
 		<footer class="footer"></footer>
 
-		<script src="js/app.min.js?_v=20231021185144"></script>
+		<script src="js/app.min.js?_v=20231023010653"></script>
 		<script></script>
 	</body>
 </html>
