Encrypting - finish the styles and JS

--- a/img/stack/sprite.stack.html
+++ b/img/stack/sprite.stack.html
@@ -113,6 +113,7 @@ They might well be outsourced to an external stylesheet of course.
  .svg-key-dims { width: 516.375px; height: 516.375px; }
  .svg-lock-dims { width: 516.375px; height: 516.375px; }
  .svg-lock-unlock-dims { width: 592.875px; height: 592.875px; }
+ .svg-reset-dims { width: 20px; height: 20px; }
  .svg-share-dims { width: 800px; height: 800px; }
  .svg-undo-dims { width: 800px; height: 800px; }
  .svg-upload-dims { width: 800px; height: 800px; }
@@ -192,6 +193,12 @@ selector is used to show the very shape that is referenced by the fragment ident
                     </div>
                     <h2>lock-unlock, </h2>
                 </li>
+             <li title="reset">
+                    <div class="icon-box">
+                        <img src="../icons/icons.svg#reset" class="svg-reset-dims" alt="reset">
+                    </div>
+                    <h2>reset, </h2>
+                </li>
              <li title="share">
                     <div class="icon-box">
                         <img src="../icons/icons.svg#share" class="svg-share-dims" alt="share">
@@ -218,7 +225,7 @@ selector is used to show the very shape that is referenced by the fragment ident
 
         </section>
         <footer>
-            <p>Generated at Sun, 22 Oct 2023 22:06:52 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
+            <p>Generated at Mon, 23 Oct 2023 16:15:06 GMT by <a href="https://github.com/svg-sprite/svg-sprite" target="_blank" rel="noopener noreferrer">svg-sprite</a>.</p>
         </footer>
     </body>
 </html>
